# p3_utils

./: .gitignore  README.md  p3_utils.code-workspace  pyproject.toml  pytest.ini  requirements.txt
.VSCodeCounter/2025-05-01_15-04-54/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-08_00-02-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/p3_utils/: __init__.py  at_utils.py  p3_app_timing.py  p3_common_utils.py  p3_excel_files.py  p3_excel_utils.py  p3_file_helpers.py  p3_helper_utils.py  p3_print_output_utils.py  p3_utils.py
tests/: test_at_utilities.py  test_p3_common_utils.py  test_p3_excel_files.py  test_p3_utils.py
tests/testdata/: testtextfile.txt
