[project]
name = "p3_utils"
dynamic = ["version"]
description = "Useful utility functions for p3 packages"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"
[project.urls]
Homepage = "https://github.com/ppainterpython/p3_utils"
